--- a/dev/style/1-base.css
+++ b/dev/style/1-base.css
@@ -40,25 +40,22 @@ html, body{
 .top-header{
   display: block;
   width: 100%;
-  height: 100vh;
+  height: 780px;
 
   z-index: 9999;
 }
 
 .top-header .header-background {
   display: block;
-  height: 100%;
+  height: 100%; 
   width: 100%; 
   z-index: 0; 
-  
-  position: absolute;
-
 
   overflow: hidden;
   background-image: url('../images/header.jpg'); 
   background-size: cover; 
   background-repeat: no-repeat; 
-  background-position: center center;
+  background-position: top center;
 }
 
 .top-bar{
@@ -106,7 +103,8 @@ html, body{
   display: block;
 
   width: 100%;
-  height: 48px;
+  min-height: 48px;
+  height: auto;
 
   padding: 5px;
   
@@ -131,7 +129,7 @@ html, body{
   .top-header{
     display: block;
     width: 100%;
-    height: 85vh;
+    height: 780px;
   }
 
   .content{
