--- a/prod/style/style.css
+++ b/prod/style/style.css
@@ -41,25 +41,22 @@ html, body{
 .top-header{
   display: block;
   width: 100%;
-  height: 100vh;
+  height: 780px;
 
   z-index: 9999;
 }
 
 .top-header .header-background {
   display: block;
-  height: 100%;
+  height: 100%; 
   width: 100%; 
   z-index: 0; 
-  
-  position: absolute;
-
 
   overflow: hidden;
   background-image: url('../images/header.jpg'); 
   background-size: cover; 
   background-repeat: no-repeat; 
-  background-position: center center;
+  background-position: top center;
 }
 
 .top-bar{
@@ -107,7 +104,8 @@ html, body{
   display: block;
 
   width: 100%;
-  height: 48px;
+  min-height: 48px;
+  height: auto;
 
   padding: 5px;
   
@@ -132,7 +130,7 @@ html, body{
   .top-header{
     display: block;
     width: 100%;
-    height: 85vh;
+    height: 780px;
   }
 
   .content{
@@ -147,122 +145,6 @@ html, body{
   .footer > a{
     margin-left: 25px;
   }
-}
-
-.carrousel {
-    background-color: blue;
-    display: block;
-    width: 100%;
-    height: auto;
-    padding: 15px;
-    text-align: center;
-}
-
-.carrousel .imgs {
-    background-color: var(--color-secondaire);
-    position: relative;
-    display: block;
-    width: 100%;
-    margin: 0 auto;
-    border-radius: 5px;
-}
-
-.carrousel .imgs > .item {
-    position: absolute;
-    display: block;
-
-    width: 100%;
-
-    margin-left: auto;
-    margin-right: auto;
-
-    top: 0;
-
-    color: #000;
-}
-
-.carrousel .imgs .item h1 {
-    margin-top: 50px;
-    text-shadow: 0 2px var(--color-front);
-    background-color: var(--color-secondaire);
-}
-
-.carrousel .imgs .item img {
-
-    margin-left: auto;
-    margin-right: auto;
-
-    display: block;
-    width:80vw;
-    border-radius: 5px;
-}
-
-.carrousel button {
-    color: var(--color-front);
-    display: block;
-    height: 40px;
-    margin-top: auto;
-    margin-bottom: auto;
-    border: 0;
-    background-color: var(--color-back);
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    cursor: pointer;
-    z-index: 9;
-    border-radius: 5px;
-    font-size: 25px;
-    color: var(--color-primale);
-}
-
-.carrousel .left {
-    left: 15px;
-}
-
-.carrousel .right {
-    right: 15px;
-}
-
-@media  (min-width: 800px) {
-    .carrousel {
-      
-    }
-}
-
-.gallery {
-    display: grid;
-
-    width: 100%;
-    min-height: 280px;
-
-    grid-auto-rows: 280px;
-    grid-gap: 15px;
-
-    grid-template-columns: repeat(auto-fill, 280px);
-
-    justify-content: center;
-    align-items: center;
-}
-
-.gallery .item {
-    display: grid;
-    background-color: black;
-    width: 100%;
-    height: 100%;
-
-    justify-content: center;
-    align-items: center;
-}
-
-.gallery img {
-    width: 100%;
-    height: auto;
-}
-
-@media screen and (min-width: 1200px) {
-    .gallery{
-        grid-template-columns: repeat(4, 280px);
-    }
 }
 
 /* menu */
@@ -429,126 +311,6 @@ html, body{
 
 }
 
-.video{
-  display: block;
-  width: 100%;
-  min-height: 600px;
-  padding: 15px;
-}
-
-.video iframe{
-    display: block;
-
-    width: 100%;
-    height: 500px;
-
-    border-radius: 15px;
-    pointer-events: none;
-
-    margin: 0 auto;
-}
-
-.video ul{
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 100px;
-
-  margin: 15px auto;
-
-  list-style: none;
-
-  padding: 0;
-
-  text-align: center;
-  white-space: nowrap;
-
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-
-.video ul::after{
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: '';
-  display: block;
-
-  background: rgb(2,0,36);
-  background: linear-gradient(
-
-    90deg, var(--color-back) 0%,
-
-    rgba(40, 37, 41, 1) 90%,
-
-    rgba(40, 37, 41, 0.01) 100%
-    
-  );
-
-  width: 10%;
-  height: 100%;
-}
-
-.video ul::before{
-  position: absolute;
-  top: 0;
-  right: 0;
-  content: '';
-  display: block;
-
-  background: rgb(2,0,36);
-  background: linear-gradient(
-
-    -90deg, var(--color-back) 0%,
-
-    rgba(40, 37, 41, 1)90%,
-
-    rgba(40, 37, 41,0.01) 100%
-    
-  );
-
-  width: 10%;
-  height: 100%;
-}
-
-.video ul li{
-  display: inline-block;
-
-  width: 200px;
-  height: 100%;
-}
-
-.video ul li a {
-  background-color: rgb(0, 0, 0);
-  display: flex;
-  width: 200px;
-  height: 100%;
-
-  justify-content: center;
-  align-items: center;
-
-  border-radius: 15px;
-}
-
-.video ul li a img{
-   width: auto;
-   height: 100%;
-}
-
-@media screen and (min-width: 800px){
-
-  .video iframe{
-    width: 40%;
-  }
-
-  .video ul::after{
-    width: 30%;
-  }
-  .video ul::before{
-    width: 30%;
-  }
-}
-
 .a-propos{
     display: block;
 }
@@ -560,12 +322,13 @@ html, body{
 
 .a-propos .parallax .box{
     
-    display: grid;
+    display: block;
     width: 100%;
     padding: 5px;
 
     height: 600px;
 
+    display: grid;
     grid-template-columns: 50% 50%;
 
     align-items: center;
@@ -579,8 +342,8 @@ html, body{
 
 .a-propos .parallax .box img{
     display: inline;
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
 
     object-fit:cover;
     border-radius: 15px;
@@ -592,7 +355,7 @@ html, body{
 }
 
 .a-propos .parallax .box .text{
-    display: grid;
+    
     width: auto;
     z-index: 2;
 
@@ -607,7 +370,8 @@ html, body{
     margin: 0;
     padding-top: 5px;
     padding-bottom: 5px;
-    font-size: 35px;
+    font-weight: bold;
+    font-size: 20px;
 
     text-shadow: 0 5px rgb(0, 0, 0);
     white-space: nowrap;
@@ -631,7 +395,37 @@ html, body{
     text-align: right !important;
 }
 
+.competence{
+  
+   display: inline-block;
+   width: 180px;
+
+   margin-top: 35px;
+   padding: 5px;
+}
+
+.competence .progress{
+   background-color: greenyellow;
+   width: 140px;
+   padding: 5px;
+   font-size: 20px;
+   margin: 5px;
+
+   border-radius: 15px;
+
+   text-align: center;
+}
+
 @media screen and (min-width: 600px){
+
+    .competence{
+        width: 300px;
+    }
+
+    .competence .progress{
+        width: 280px;
+    }
+
     .a-propos .parallax .box img{
         width: 200px;
         height: 200px;
@@ -642,9 +436,14 @@ html, body{
     .a-propos .parallax .box {
         height: 100vh;
     }
+
     .a-propos .parallax .box img{
         width: 300px;
         height: 300px;
+    }
+
+    .a-propos .parallax .box .text{
+        display: grid;
     }
 
     .a-propos .parallax .box .text h3{
@@ -695,7 +494,7 @@ html, body{
 }
 
 .accueil .accueil-content h1{
-  font-size: 45px;
+  font-size: 35px;
   white-space: nowrap;
 }
 
